peac_dev/force-app/main/default/objects/Pool_Asset_Reading_History__c/Pool_Asset_Reading_History__c.object-meta.xml
<CustomObject>
    <label>Pool Asset Reading History</label>
    <nameField>
        <displayFormat>PARH-{0000}</displayFormat>
        <label>Pool Asset Reading History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pool Asset Reading Histories</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>