peac_dev/force-app/main/default/objects/Pool_Asset_Reading_History__c/fields/Actual_Usage__c.field-meta.xml
<CustomField>
    <fullName>Actual_Usage__c</fullName>
    <label>Actual Usage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>