peac_dev/force-app/main/default/objects/Pool_Asset_Reading_History__c/fields/Coverage_Period__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Period__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Coverage period from date</label>
    <type>Date</type>
</CustomField>