peac_dev/force-app/main/default/objects/Pool_Asset_Reading_History__c/fields/Coverage_to_date__c.field-meta.xml
<CustomField>
    <fullName>Coverage_to_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Coverage to date</label>
    <type>Date</type>
</CustomField>