peac_dev/force-app/main/default/objects/Pool_Asset_Reading_History__c/fields/Date_Entered__c.field-meta.xml
<CustomField>
    <fullName>Date_Entered__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Entered</label>
    <type>Date</type>
</CustomField>