peac_dev/force-app/main/default/objects/Pool_Asset_Reading_History__c/fields/Dealer_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Invoice_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>