peac_dev/force-app/main/default/objects/Pool_Asset_Reading_History__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>