peac_dev/force-app/main/default/objects/Pool_Asset_Reading_History__c/fields/Number_if_units__c.field-meta.xml
<CustomField>
    <fullName>Number_if_units__c</fullName>
    <label>Number of Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>