peac_dev/force-app/main/default/objects/Pool_Asset_Reading_History__c/fields/Pool_Asset__c.field-meta.xml
<CustomField>
    <fullName>Pool_Asset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup field with Pool Asset. DP-1116</description>
    <label>Pool Asset</label>
    <referenceTo>Pool_Asset__c</referenceTo>
    <relationshipLabel>Pool Asset Reading Histories</relationshipLabel>
    <relationshipName>Pool_Asset_Reading_History</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>