peac_dev/force-app/main/default/objects/Pool_Asset_Reading_History__c/fields/Reading_Date__c.field-meta.xml
<CustomField>
    <fullName>Reading_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reading Date</label>
    <type>Date</type>
</CustomField>