peac_dev/force-app/main/default/objects/Pool_Asset_Reading_History__c/fields/Tie_1_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tie_1_Rate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tie 1 Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>