peac_dev/force-app/main/default/objects/Pool_Asset_Reading_History__c/fields/Usage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Usage_Amount__c</fullName>
    <label>Usage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>